--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -753,6 +753,34 @@
 				  </div>
 				  <div class="card">
 					<div class="box">
+						<h3>Neumorphism Gradient Loader</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Loader_neu_gradient.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Social Media Buttons</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Buttons_social_media.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>3D Flip Card</h3>
+					   <img src="https://images.pexels.com/photos/801885/pexels-photo-801885.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" alt="Flip Card"/>
+					   <a href="html/Card_flip_3D.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Parallax Tilt Effect</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Parallax_tilt.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
 						<h3>Portfolio Title Here</h3>
 					   <img src="add/p404.png" alt="404"/>
 					   <a href="html/404_page.html">Click here</a>
@@ -763,6 +791,132 @@
 						<h3>Portfolio Title Here</h3>
 					   <img src="add/p404.png" alt="404"/>
 					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Parallax Tilt Effect</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Parallax_tilt.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Parallax Tilt Effect</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Parallax_tilt.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Parallax Tilt Effect</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Parallax_tilt.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Parallax Tilt Effect</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Parallax_tilt.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Parallax Tilt Effect</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Parallax_tilt.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
