--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -838,15 +838,15 @@
 				  <div class="card">
 					<div class="box">
 						<h3>Book Mockup</h3>
-					   <img src="add/p404.png" alt="404"/>
+					   <img src="add/Book_mockup_bg.jpg" alt="Book mockup"/>
 					   <a href="html/Book_mockup.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Portfolio Title Here</h3>
-					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
+						<h3>Banner Animation</h3>
+					   <img src="add/Banner_animation_mosque.png" alt="Banner Animation"/>
+					   <a href="html/Banner_animation.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
