--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -851,9 +851,9 @@
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Portfolio Title Here</h3>
+						<h3>Split Banner</h3>
 					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
+					   <a href="html/Banner_split.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
