--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -852,15 +852,15 @@
 				  <div class="card">
 					<div class="box">
 						<h3>Split Banner</h3>
-					   <img src="add/p404.png" alt="404"/>
+					   <img src="add/Banner_split" alt="Banner split"/>
 					   <a href="html/Banner_split.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Parallax Tilt Effect</h3>
+						<h3>Float an Image Without Text Wrapping</h3>
 					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/Parallax_tilt.html">Click here</a>
+					   <a href="html/Float_image.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
