Added project for calc and new portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -859,15 +859,15 @@
 				  <div class="card">
 					<div class="box">
 						<h3>Float an Image Without Text Wrapping</h3>
-					   <img src="add/p404.png" alt="404"/>
+					   <img src="add/Float_image_1.jpg" alt="Float image"/>
 					   <a href="html/Float_image.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Portfolio Title Here</h3>
-					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
+						<h3>Double Exposure</h3>
+					   <img src="add/Double_exposure_1.jpg" alt="Double Exposure"/>
+					   <a href="html/Double_exposure.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
