Respons website + horiz scroll

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -781,62 +781,6 @@
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Portfolio Title Here</h3>
-					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
-					</div>
-				  </div>
-				  <div class="card">
-					<div class="box">
-						<h3>Portfolio Title Here</h3>
-					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
-					</div>
-				  </div>
-				  <div class="card">
-					<div class="box">
-						<h3>Portfolio Title Here</h3>
-					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
-					</div>
-				  </div>
-				  <div class="card">
-					<div class="box">
-						<h3>Parallax Tilt Effect</h3>
-					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/Parallax_tilt.html">Click here</a>
-					</div>
-				  </div>
-				  <div class="card">
-					<div class="box">
-						<h3>Portfolio Title Here</h3>
-					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
-					</div>
-				  </div>
-				  <div class="card">
-					<div class="box">
-						<h3>Portfolio Title Here</h3>
-					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
-					</div>
-				  </div>
-				  <div class="card">
-					<div class="box">
-						<h3>Portfolio Title Here</h3>
-					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
-					</div>
-				  </div>
-				  <div class="card">
-					<div class="box">
-						<h3>Parallax Tilt Effect</h3>
-					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/Parallax_tilt.html">Click here</a>
-					</div>
-				  </div>
-				  <div class="card">
-					<div class="box">
 						<h3>Book Mockup</h3>
 					   <img src="add/Book_mockup_bg.jpg" alt="Book mockup"/>
 					   <a href="html/Book_mockup.html">Click here</a>
@@ -852,13 +796,13 @@
 				  <div class="card">
 					<div class="box">
 						<h3>Split Banner</h3>
-					   <img src="add/Banner_split" alt="Banner split"/>
+					   <img src="add/Banner_split_bg.jpg" alt="Banner split"/>
 					   <a href="html/Banner_split.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Float an Image Without Text Wrapping</h3>
+						<h3>Float Image Without Text Wrap</h3>
 					   <img src="add/Float_image_1.jpg" alt="Float image"/>
 					   <a href="html/Float_image.html">Click here</a>
 					</div>
@@ -879,6 +823,20 @@
 				  </div>
 				  <div class="card">
 					<div class="box">
+						<h3>Res Coming Soon Website</h3>
+					   <img src="add/Website_coming_soon_man.png" alt="404"/>
+					   <a href="html/Website_coming_soon.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Horizontal Page Scroll</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/Horizontal_page_scroll.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
 						<h3>Portfolio Title Here</h3>
 					   <img src="add/p404.png" alt="404"/>
 					   <a href="html/404_page.html">Click here</a>
@@ -886,7 +844,14 @@
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Parallax Tilt Effect</h3>
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Parautrr</h3>
 					   <img src="add/p404.png" alt="404"/>
 					   <a href="html/Parallax_tilt.html">Click here</a>
 					</div>
@@ -914,7 +879,21 @@
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Parallax Tilt Effect</h3>
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Portfolio Title Here</h3>
+					   <img src="add/p404.png" alt="404"/>
+					   <a href="html/404_page.html">Click here</a>
+					</div>
+				  </div>
+				  <div class="card">
+					<div class="box">
+						<h3>Parautrr</h3>
 					   <img src="add/p404.png" alt="404"/>
 					   <a href="html/Parallax_tilt.html">Click here</a>
 					</div>
