--- a/portfolio/html/Loader_liquid.html
+++ b/portfolio/html/Loader_liquid.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liquid Loader</title>
+    <title>Responsive Coming Soon Website</title>
     <link rel="stylesheet" type="text/css" href="/portfolio/css/Loader_liquid.css">
     <style type="text/css"> 
         .Nav {
