anim search + loader + upd swiper slider

--- a/portfolio/html/Swiper_card_slider.html
+++ b/portfolio/html/Swiper_card_slider.html
@@ -81,7 +81,12 @@
                 slideShadows: true,
                 shadowOffset: 20,
                 shadowScale: 0.94,
-            }
+            },
+            loop: true,
+            autoplay: {
+            delay: 500,
+            disableOnInteraction: false,
+            },
         });
     </script>
 </body>
