--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -837,16 +837,16 @@
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Portfolio Title Here</h3>
+						<h3>Animated Search</h3>
 					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
+					   <a href="html/Animated_search.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Portfolio Title Here</h3>
+						<h3>Wavy Circle Loader</h3>
 					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
+					   <a href="html/Loader_wavy_circle.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
