--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -851,9 +851,9 @@
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Parautrr</h3>
+						<h3>Floating Action Button</h3>
 					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/Parallax_tilt.html">Click here</a>
+					   <a href="html/Button_float_action.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
