--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -872,16 +872,16 @@
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Portfolio Title Here</h3>
+						<h3>List Item Hover</h3>
 					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
+					   <a href="html/List_item_hover.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Portfolio Title Here</h3>
+						<h3>Password generator</h3>
 					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
+					   <a href="html/Password_generator.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
