book+photo slider

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -893,16 +893,16 @@
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Parautrr</h3>
-					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/Parallax_tilt.html">Click here</a>
+						<h3>Image Slider</h3>
+					   <img src="add/Slider_image_img1_large.jpg" alt="404"/>
+					   <a href="html/Slider_image.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
 					<div class="box">
-						<h3>Portfolio Title Here</h3>
+						<h3>Book hover</h3>
 					   <img src="add/p404.png" alt="404"/>
-					   <a href="html/404_page.html">Click here</a>
+					   <a href="html/Book_hover.html">Click here</a>
 					</div>
 				  </div>
 				  <div class="card">
