--- a/Game_Dev/Tank_game_pixi/game.html
+++ b/Game_Dev/Tank_game_pixi/game.html
@@ -17,6 +17,6 @@
     
         PIXI.utils.sayHello(type)
     </script>
-    <script src="../Tank_game_pixi/game.js"></script>
+    <script src="../Tank_game_pixi/Game.js"></script>
 </body>
 </html>
