--- a/HTML_CSS_lessons/index.html
+++ b/HTML_CSS_lessons/index.html
@@ -11,6 +11,57 @@
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <img src="" alt="Аватарка" width="200px">
+    <h1>Глушко Игорь</h1>
+    <p>Я студент курса <strong>HTML, CSS</strong> от Владилена Минина</p>
+    <p>Я люблю <em>путешестовать и познавать новое</em>.</p>
+
+    <h4>Список социальных сетей</h4>
+    <a href="http://" target="_blank" rel="noopener noreferrer">LinkedIn</a>
+
+    <h2>Мои хобби</h2>
+    <ol>
+        <li>Семья</li>
+        <li>Путешествия</li>
+    </ol>
+
+    <h2>Опыт работы</h2>
+    <table>
+        <thead>
+            <th>Название роботы</th>
+            <th>Должность</th>
+            <th>Период работы</th>
+        </thead>
+        <tbody>
+            <tr>
+                <td>TestMa</td>
+                <td>QA</td>
+                <td>2018-2020</td>
+            </tr>
+            <tr>
+                <td>Digi</td>
+                <td>QA</td>
+                <td>2020-</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <H2>Связаться со мной</H2>
+    <form action="/">
+        <div>
+            <label for="name">Ваше имя</label>
+            <input type="text" id="name" placeholder="Введите имя">
+        </div>
+        <div>
+            <label for="email">Ваш email</label>
+            <input type="email" id="email" placeholder="Введите email">
+        </div>
+        <div>
+            <br>
+            <label for="message">Ваше сообщение:</label>
+            <textarea id="message" cols="20" rows="5" placeholder="Введите сообщение..."></textarea>
+        </div>
+        <input type="submit" value="Отправить">
+    </form>
 </body>
 </html>
