--- a/HTML_CSS_lessons/index.html
+++ b/HTML_CSS_lessons/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div class="info">
-            <img src="" alt="Аватарка" class="avatar">
+            <img src="ava_for_test.jpg" alt="Аватарка" class="avatar">
             <div class="info-text">
                 <h1>Глушко Игорь</h1>
                 <p>Я студент курса <strong>HTML, CSS</strong> от Владилена Минина</p>
